# MicMuteRS

./: .gitignore  Cargo.toml  build_error.txt  build_output_v3.txt  check_error.txt  diag.txt  release_build_output.txt
assets/: convert.py
src/: audio.rs  com_interfaces.rs  config.rs  gui.rs  hotkey.rs  main.rs  startup.rs  styles.css  tray.rs
src-tauri/: Cargo.toml  build_debug.txt  build_debug2.txt  build_release.txt  check_errors_tauri.txt  check_errors_tauri2.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  lib.rs  main.rs  startup.rs  utils.rs
src-tauri/ui/: index.html  main.js  osd.html  osd.js  overlay.html  overlay.js
