[package]
name = "MicMuteRs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.30"
tray-icon = "0.19"
rodio = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
directories = "5.0"
windows-core = "0.58.0"
image = "0.25"
usvg = "0.38"
resvg = "0.38"
tiny-skia = "0.11"
egui_extras = { version = "0.30", features = ["svg", "image"] }
open = "5.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_System_Com_StructuredStorage",
]

[build-dependencies]
winres = "0.1"
